# prometheus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL_NOTES.md  README.md  Refactor_v2.md  install.sh  install_mac.sh  mkdocs.yml  pyproject.toml  refactor.md  requirements.txt  usage.md
.claude/commands/: prometheus.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-mac.yml  ci.yml  clean-jupyter.yml  deploy-mkdocs.yml  docker-publish.yml  test-proposal-macos-arm64.yml
assets/: ascii-logo.txt
container/: Dockerfile  Dockerfile.gpu  README.md
docs/: containers.md  installation.md  papers.md  requirements.txt  usage.md
docs/installation/: built-in-installer.md  containers.md  index.md
examples/: 01_basic_water.py  02_basic_ice.py  03_docker_water.py  04_event_view.py  05_genie_injection.py  README.md  ice_config.toml  multi_pmt_om_example.ipynb  water_config.toml
examples/legacy/: detector_example.ipynb  earth_model_comparison.ipynb  effective_area_example.py  example_batches.py  example_detector_construction.py  example_dist_sampling.ipynb  example_meta_data_reader.ipynb  example_olympus.py  example_plotting_olympus.ipynb  example_ppc.py  fasrc_example_ppc.py  genie_tester.ipynb  injection.ipynb  output_example.ipynb  plotting.py  ppc_tables.ipynb  timing_water_plot.ipynb  water_timing.py
hyperion/: __init__.py  constants.py  data.py  medium.py  propagate.py  utils.py
olympus/: __init__.py  utils.py
prometheus/: __init__.py  config.py  config_types.py  logging_config.py  plotting.py  prometheus.py  summary.py
resources/: README.md
scripts/: activate.sh  docker_test.sh  fixes.sh  install_hooks.sh  install_leptoninjector_legacy.sh  install_leptoninjector_mac.sh  setup_env.sh
tests/: conftest.py  test_capture.py  test_dataclasses.py  test_detector_unit.py  test_e2e.py  test_formatting.py  test_geo.py  test_icecube.py  test_injection.py  test_logcounter.py  test_medium.py  test_module_shape.py  test_nflow_model.py  test_nonspherical_modules.py  test_om_conf_generation.py  test_parse_ppc.py  test_pone.py  test_ppc_propagator_setup.py  test_resource_pathing.py  test_serialization.py  test_smoke.py  test_summary.py  test_utils.py
(+126 files in other folders)
