[tool.poetry]
name = "prometheus"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
awkward = "^2.6.1"
numpy = ">=1.26,<3"
pyarrow = ">=15"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
proposal = ">=7.6.2,<8"
jaxlib = ">=0.4.35"
jax = ">=0.4.35"
optax = "^0.2.5"
fennel_seed = { version = "*", source = "fennel-github", extras = ["jax"] }
h5py = "^3.10.0"

[[tool.poetry.source]]
name = "fennel-github"
url = "https://github.com/MeighenBergerS/fennel.git"
default = false
secondary = true

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: end-to-end simulation tests (deselected by default; use --run-slow)"]

