[tool.poetry]
name = "prometheus"
version = "1.0.0"
description = "prometheus: neutrino detector simulations"
authors = ["Stephan Meighen-Berger <stephan.meighenberger@gmail.com>"]
license = "LGPL-2.1"
homepage = "https://github.com/Harvard-Neutrino/prometheus"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
awkward = "^2.6.1"
numpy = ">=1.26,<3"
pyarrow = ">=15"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
proposal = ">=7.6.2,<8"
jaxlib = ">=0.4.35"
jax = ">=0.4.35"
optax = "^0.2.5"
fennel_seed = { version = "*", source = "fennel-github", extras = ["jax"] }
h5py = "^3.10.0"
matplotlib = ">=3.8"
scipy = ">=1.12"
fsspec = ">=2024.2"
uproot = ">=5.3"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4"

[[tool.poetry.source]]
name = "fennel-github"
url = "https://github.com/MeighenBergerS/fennel.git"
default = false
secondary = true

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: end-to-end simulation tests (deselected by default; use --run-slow)"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

